--- a/index.html
+++ b/index.html
@@ -70,31 +70,31 @@
         <section>
             <h2>What are we doing</h2>
                 <ul>
-                    <li><img src="images/monitor1-min.jpg" alt="monitor1" width="400"></li>
-                    <li><img src="images/ekran2-min.jpg" alt="ekran2" width="400"></li>
-                    <li><img src="images/nout3-min.jpg" alt="nout3" width="400"></li>
+                    <li><img src="./images/monitor1-min.jpg" alt="monitor1" width="360"></li>
+                    <li><img src="./images/ekran2-min.jpg" alt="ekran2" width="360"></li>
+                    <li><img src="./images/nout3-min.jpg" alt="nout3" width="360"></li>
                 </ul>
         </section>
         <section>
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="images/foto-people-1-min.jpg" alt="people-1" width="400">
+                    <img src="./images/foto-people-1-min.jpg" alt="people-1" width="360">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="images/foto-people-2-min.jpg" alt="people-2" width="400">
+                    <img src="./images/foto-people-2-min.jpg" alt="people-2" width="360">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="images/foto-people-3-min.jpg" alt="people-3" width="400">
+                    <img src="./images/foto-people-3-min.jpg" alt="people-3" width="360">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="images/foto-people-4-min.jpg" alt="people-4" width="400">
+                    <img src="./images/foto-people-4-min.jpg" alt="people-4" width="360">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -103,7 +103,7 @@
     </main>
     <footer>
         <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and<br>sales for your business with digital<br> marketing & growth solutions.</p>   
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>   
     </footer>
 </body>
 </html>     
